[project]
name = "pyspark-code-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "libcst>=1.7.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pyspark>=3.5.5",
    "setuptools>=78.1.0",
    "uvicorn>=0.34.0",
]
